Fixed Sign out css not showing

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -19,6 +19,11 @@ body {
     width: 1.5rem;
 }
 
+.logout {
+    margin-top: 10rem;
+    color: white !important;
+}
+
 .logo-font {
     text-transform: uppercase;
 }
